Update 3sum.java